--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -7,13 +7,33 @@ set -g mode-keys vi
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
+# simplified tmux status,
+# taken from https://waylonwalker.com/tmux-status-bar/
+set -g status-left-length 85
+set -g status-left "session#[fg=colour135] #S"
+set -g window-status-current-format "#[fg=black,bold bg=default]│#[fg=colour135 bg=black]#{?window_zoomed_flag,#[fg=red](,}#W#{?window_zoomed_flag,#[fg=red]),}#[fg=black,bold bg=default]│"
+set -g status-style bg=default
+set -g status-right '#(gitmux "#{pane_current_path}")'
+set -g status-justify centre
+
+# restore ctrl-l in vim-tmux-navigator
+bind C-l send-keys 'C-l'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @themepack 'powerline/default/magenta'
+# Themepack format options
+# set -g @themepack-status-left-area-left-format "#S"
+# set -g @themepack-status-left-area-middle-format ""
+# set -g @themepack-status-left-area-right-format "#I:#P"
+# set -g @themepack-status-right-area-left-format ""
+# set -g @themepack-status-right-area-middle-format ""
+# set -g @themepack-status-right-area-right-format "#H"
+# set -g @themepack-window-status-current-format "#I:#W#F"
+# set -g @themepack-window-status-format "#I:#W#F"
+
+# set -g @themepack 'powerline/default/magenta'
 
 run '~/.tmux/plugins/tpm/tpm'
-
-
