--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -19,6 +19,12 @@ set -g status-justify centre
 # restore ctrl-l in vim-tmux-navigator
 bind C-l send-keys 'C-l'
 
+# open new panes and windows in current path, regardless
+# of where tmux was opened
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
