--- a/dotfiles/.i3/config
+++ b/dotfiles/.i3/config
@@ -11,6 +11,8 @@ set $mod Mod4
 default_border pixel 1
 default_floating_border normal
 
+for_window [all] default_border pixel 5
+
 # Hide borders
 hide_edge_borders none
 
@@ -33,7 +35,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id dmenu_recency
+bindsym $mod+d exec --no-startup-id rofi -modes "run#ssh" -show drun -show-icons -theme solarized -font "hack 12" -disable-history
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -286,7 +288,8 @@ bindsym $mod+9 exec --no-startup-id blurlock
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id nitrogen --restore; sleep 1; picom -b
+# exec --no-startup-id nitrogen --restore; sleep 1; picom -b
+exec --no-startup-id nitrogen --set-auto $HOME/Pictures/wallpaper.jpg --head=0 && nitrogen --set-auto $HOME/Pictures/wallpaper.jpg --head=1
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
@@ -296,12 +299,13 @@ exec --no-startup-id clipit
 # exec_always --no-startup-id sbxkb
 exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
-exec --no-startup-id xautolock -time 10 -locker blurlock
+# exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 exec --no-startup-id /usr/lib/kdeconnectd
 exec_always --no-startup-id ~/.screenlayout/autoxrandr.sh
 exec --no-startup-id bluetoothctl power on
+exec --no-startup-id blueman-applet
 # exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Color palette used for the terminal ( ~/.Xresources file )
@@ -356,11 +360,11 @@ bar {
         separator  #454947
 
 #                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
+        focused_workspace  #F9FAF9 #80A0FF #292F34
         active_workspace   #595B5B #353836 #FDF6E3
         inactive_workspace #595B5B #222D31 #EEE8D5
-        binding_mode       #16a085 #2C2C2C #F9FAF9
-        urgent_workspace   #16a085 #FDF6E3 #E5201D
+        binding_mode       #80A0FF #2C2C2C #F9FAF9
+        urgent_workspace   #80A0FF #FDF6E3 #E5201D
     }
 }
 
@@ -402,6 +406,10 @@ set $mode_gaps Gaps: (o) outer, (i) inner
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
 bindsym $mod+g mode "$mode_gaps"
+
+# temporary: disable tile-dragging from titlebars
+# see https://github.com/i3/i3/issues/5155
+bindsym button1 focus
 
 mode "$mode_gaps" {
         bindsym o      mode "$mode_gaps_outer"
