--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -7,6 +7,11 @@ set -g mode-keys vi
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
+# set default window name to "curpath > curcommand"
+set-option -g status-interval 1
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}>#{b:pane_current_command}'
+
 # simplified tmux status,
 # taken from https://waylonwalker.com/tmux-status-bar/
 set -g status-left-length 85
@@ -24,6 +29,10 @@ bind C-l send-keys 'C-l'
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# start window panes at 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
