--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -10,7 +10,7 @@ set -ga terminal-overrides ",*256col*:Tc"
 # set default window name to "curpath > curcommand"
 set-option -g status-interval 1
 set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}>#{b:pane_current_command}'
+set-option -g automatic-rename-format '#{b:pane_current_path}»#{b:pane_current_command}'
 
 # simplified tmux status,
 # taken from https://waylonwalker.com/tmux-status-bar/
