--- a/dotfiles/.i3/config
+++ b/dotfiles/.i3/config
@@ -29,7 +29,8 @@ font xft:URWGothic-Book 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -77,6 +78,7 @@ bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 bindsym $mod+c exec firefox --private-window
 bindsym $mod+Shift+c exec firefox
 
+
 # media keys
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioPause exec playerctl play-pause
@@ -84,6 +86,10 @@ bindsym XF86AudioPause exec playerctl play-pause
 # toggle dunst notifications
 # see https://tdem.in/post/dunst-toggle/
 bindsym $mod+Shift+m exec --no-startup-id ~/.i3/toggle_dunst.sh
+
+# view screen menu
+# see https://gist.github.com/amanusk/6b79d407945ca79caa945ce2658fd987
+bindsym $mod+p exec --no-startup-id ~/.i3/toggle_screen.sh
 
 # focus_follows_mouse no
 
@@ -283,6 +289,20 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
+bindsym $mod+Alt_L mode "eeeeee"
+set $eeee_cmd "$(date +'%s') >>$HOME/annual.txt"
+
+mode "eeeeee" {
+	bindsym e exec --no-startup-id bash -c "echo eeeeeee $eeee_cmd"; mode "default"
+	bindsym d exec --no-startup-id bash -c "echo digamos $eeee_cmd"; mode "default"
+	bindsym j exec --no-startup-id bash -c "echo justamente $eeee_cmd"; mode "default"
+	bindsym n exec --no-startup-id bash -c "echo 'no?' $eeee_cmd"; mode "default"
+	bindsym o exec --no-startup-id bash -c "echo o sea $eeee_cmd"; mode "default"
+
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+}
+
 # Lock screen
 bindsym $mod+9 exec --no-startup-id blurlock
 
@@ -297,7 +317,7 @@ exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
 # exec --no-startup-id blueman-applet
 # exec_always --no-startup-id sbxkb
-exec --no-startup-id start_conky_maia
+# exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
 # exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
