--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,8 +4,11 @@ setw -g mouse on
 set -g mode-keys vi
 
 # enable truecolors
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "screen-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
+
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",tmux-256color:Tc"
 
 # set default window name to "curpath > curcommand"
 set-option -g status-interval 1
